potential fix for project thumbnail alignment issues

--- a/client/src/SASS/ProjectThumbnail.scss
+++ b/client/src/SASS/ProjectThumbnail.scss
@@ -22,12 +22,13 @@
     justify-content: space-between;
 
     .project-middle {
-      width: 57%;
+      width: 60%;
+      
     }
 
-    .project-username {
+    .project-username {      
       margin: 0%;
-      margin-top: 2%;
+      margin-top: 0px;
       color: rgba(255, 255, 255, 0.507);
     }
   }
@@ -37,7 +38,16 @@
     width: 30px;
     height: 30px;
     margin-left: 1px;
+    margin-right: 1px;
     margin-top: 7px;
+    width: 10%;    
+  }
+
+  .project-middle {   
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;   
   }
 
   .project-info {
@@ -53,15 +63,18 @@
     pointer-events: none;
 
     h1 {
-      margin-top: 10px;
+      //margin-top: 10px;
       font-size: 14px;
-      font-weight: 500;
+      font-weight: 500;      
     }
 
     .created {
-      font-weight: 400;
+      display: flex;
+      justify-content: flex-end;      
+      font-weight: 500;      
       color: rgba(255, 255, 255, 0.507);
-      margin-top: 8%;
+      //margin-top: 8%;
+      width: 30%;
     }
   }
 
